Add centerpiece to colorwheel. Adjust Newton's balls

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="spinner colorwheel"></div>
+  <div class="spinner colorwheel">
+    <div class="centerpiece">45%</div>
+  </div>
   <!--<div class="spinner windcatcher">
     <div class="blade"></div>
     <div class="blade"></div>
@@ -25,5 +27,6 @@
   <!--<div class="spinner newton">
     <div class="ball"></div><div class="ball"></div><div class="ball"></div><div class="ball"></div><div class="ball"></div>
   </div>-->
+  <!--<div class="spinner clock"></div>-->
 </body>
 </html>
