New spinner: clock

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="spinner colorwheel">
+  <!--<div class="spinner colorwheel">
     <div class="centerpiece">45%</div>
-  </div>
+  </div>-->
   <!--<div class="spinner windcatcher">
     <div class="blade"></div>
     <div class="blade"></div>
@@ -27,6 +27,9 @@
   <!--<div class="spinner newton">
     <div class="ball"></div><div class="ball"></div><div class="ball"></div><div class="ball"></div><div class="ball"></div>
   </div>-->
-  <!--<div class="spinner clock"></div>-->
+  <div class="spinner clock">
+    <div class="shadow"></div>
+    <div class="dial"></div>
+  </div>
 </body>
 </html>
