New spinner: sphere

--- a/index.html
+++ b/index.html
@@ -27,9 +27,16 @@
   <!--<div class="spinner newton">
     <div class="ball"></div><div class="ball"></div><div class="ball"></div><div class="ball"></div><div class="ball"></div>
   </div>-->
-  <div class="spinner clock">
+  <!--<div class="spinner clock">
     <div class="shadow"></div>
     <div class="dial"></div>
+  </div>-->
+  <div class="spinner sphere">
+    <div class="inner">
+      <div class="disc"></div>
+      <div class="disc"></div>
+      <div class="disc"></div>
+    </div>
   </div>
 </body>
 </html>
