--- a/index.html
+++ b/index.html
@@ -3,12 +3,90 @@
 <head>
   <title></title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <style type="text/css">
+    :focus {outline:none;}
+    body {
+      text-align: center;
+      background: url(bg.png);
+      height: 100%;
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .controls {
+      position: absolute;
+      top: 0;
+      right: 0;
+      margin: 0.2em;
+    }
+    .button {
+      font-family: monospace;
+      border: none;
+      background: #333;
+      font-size: 2em;
+      padding: 0 0.2em 0.2em;
+      margin: 0.1em;
+      line-height: 0.8em;
+      color: #f0f0f0;
+    }
+    .button:hover {
+      background: #555;
+    }
+    .button:active {
+      background: black;
+      transform: translateY(1%);
+    }
+    .left { float: left; }
+    .right { float: right; }
+    .position {
+      font-family: monospace;
+    }
+  </style>
+  <script type="text/javascript" src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script type="text/javascript">
+    $(function () {
+
+      function mod(num, n) { return ((num % n) + n) % n; }
+
+      function setCurrentSpinner() {
+        $('.spinner').remove();
+        $spinners.eq(current).appendTo($('body'));
+        $pos.text((current + 1) + ' / ' + $spinners.length);
+      }
+
+      function setSpinnerInDirection(dir) {
+        current = mod(current + dir, $spinners.length);
+        setCurrentSpinner();
+      }
+
+      var current = 0;
+      var $spinners = $('.spinner').remove();
+      var $controls = $('.controls');
+
+      [{ cls: 'left', html: '&larr;', dir: -1, }, { cls: 'right', html: '&rarr;', dir: 1, } ].forEach(function (btn) {
+        $('<button>')
+            .addClass(btn.cls + ' button')
+            .html(btn.html)
+            .appendTo($controls)
+            .on('click', setSpinnerInDirection.bind(null, btn.dir));
+      });
+
+      var $pos = $('<div>').addClass('position').appendTo($controls);
+
+      setCurrentSpinner();
+
+      $(document).on('keydown', function (ev) {
+        var dir = { 37: -1, 39: 1, }[ev.which];
+        dir && setSpinnerInDirection(dir);
+      });
+
+    });
+  </script>
 </head>
 <body>
-  <!--<div class="spinner colorwheel">
-    <div class="centerpiece">45%</div>
-  </div>-->
-  <!--<div class="spinner windcatcher">
+  <div class="controls"></div>
+  <div class="spinner windcatcher">
     <div class="blade"></div>
     <div class="blade"></div>
     <div class="blade"></div>
@@ -17,26 +95,29 @@
     <div class="blade"></div>
     <div class="blade"></div>
     <div class="blade"></div>
-  </div>-->
-  <!--<div class="spinner slabs">
+  </div>
+  <div class="spinner slabs">
     <div class="slab"></div>
     <div class="slab"></div>
     <div class="slab"></div>
     <div class="slab"></div>
-  </div>-->
-  <!--<div class="spinner newton">
+  </div>
+  <div class="spinner newton">
     <div class="ball"></div><div class="ball"></div><div class="ball"></div><div class="ball"></div><div class="ball"></div>
-  </div>-->
-  <!--<div class="spinner clock">
+  </div>
+  <div class="spinner clock">
     <div class="shadow"></div>
     <div class="dial"></div>
-  </div>-->
+  </div>
   <div class="spinner sphere">
     <div class="inner">
       <div class="disc"></div>
       <div class="disc"></div>
       <div class="disc"></div>
     </div>
+  </div>
+  <div class="spinner colorwheel">
+    <div class="centerpiece">45%</div>
   </div>
 </body>
 </html>
