--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
   </div>
   <div class="spinner clock">
     <div class="shadow"></div>
-    <div class="dial"></div>
+    <div class="dial">
+      <div class="hour hand"></div>
+      <div class="minute hand"></div>
+    </div>
   </div>
   <div class="spinner sphere">
     <div class="inner">
@@ -117,7 +120,7 @@
     </div>
   </div>
   <div class="spinner colorwheel">
-    <div class="centerpiece">45%</div>
+    <div class="centerpiece"></div>
   </div>
 </body>
 </html>
