Fix flex layout issues in Safari (maybe)

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
       background: url(bg.png);
       height: 100%;
       margin: 0;
+      display: -webkit-flex;
       display: flex;
+      -webkit-align-items: center;
       align-items: center;
+      -webkit-justify-content: center;
       justify-content: center;
     }
     .controls {
