New spinner: Infinity

--- a/index.html
+++ b/index.html
@@ -141,5 +141,23 @@
   <div class="spinner colorwheel" id="colorwheel">
     <div class="centerpiece"></div>
   </div>
+  <div class="spinner infinity" id="infinity">
+    <div class="half">
+      <div class="marker"></div>
+      <div class="marker"></div>
+      <div class="marker"></div>
+      <div class="marker"></div>
+      <div class="marker"></div>
+      <div class="marker"></div>
+    </div>
+    <div class="half">
+      <div class="marker"></div>
+      <div class="marker"></div>
+      <div class="marker"></div>
+      <div class="marker"></div>
+      <div class="marker"></div>
+      <div class="marker"></div>
+    </div>
+  </div>
 </body>
 </html>
